testing/Travis/testcases/prototype/shouldSucceed/Try50.adl
CONTEXT Try47 IN DUTCH

PATTERN Medewerkers
CLASSIFY S ISA G
RELATION r[G*Iets]
RELATION s[S*S]
ENDPATTERN

INTERFACE TeValideren : I[S]
BOX [ iets : s;r ]

ENDCONTEXT